Décimo Commit: Agregando burbujas de redes sociales, mejorando tienda, agregando carrito

--- a/html/index.html
+++ b/html/index.html
@@ -94,6 +94,29 @@
   </div>
 </aside>
 
+<div class="social-bubbles">
+  <a href="https://wa.me/51953721560"
+     class="social-bubble whatsapp"
+     target="_blank"
+     aria-label="WhatsApp">
+    <img src="../img/wsp.png" alt="WhatsApp">
+  </a>
+
+  <a href="https://www.instagram.com/fitkidsaqp/"
+     class="social-bubble instagram"
+     target="_blank"
+     aria-label="Instagram">
+    <img src="../img/instagram.png" alt="Instagram">
+  </a>
+
+  <a href="https://www.facebook.com/FitKidsAqp"
+     class="social-bubble facebook"
+     target="_blank"
+     aria-label="Facebook">
+    <img src="../img/facebook.png" alt="Facebook">
+  </a>
+</div>
+
 <footer class="footer">
   <div class="contenedor footer-grid">
 
@@ -120,7 +143,7 @@
       <h4>Contacto</h4>
       <ul>
         <li>📍 Arequipa, Perú</li>
-        <li>📞 +51 953 721 561</li>
+        <li>📞 +51 953 721 560</li>
         <li>✉️ contacto@fitkids.pe</li>
       </ul>
     </div>
