Undécimo Commit: Acomodando css

--- a/html/nuestrasSedes.html
+++ b/html/nuestrasSedes.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="../img/logo_fit_kids.png">
   <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/sedes.css">
 </head>
 
 <body>
@@ -66,8 +67,8 @@
       <article class="sede-card">
         <img class="sede-thumb" src="../img/Recoleta_Fitkids.jpg" alt="Sede Parque FitKids">
         <div class="sede-info">
-          <span class="sede-badge">Cercado</span>
-          <h3>Sede Cercado</h3>
+          <span class="sede-badge">Recoleta</span>
+          <h3>Sede Recoleta</h3>
           <p>Actividades al aire libre: circuitos, coordinación y juegos de movimiento.</p>
 
           <div class="sede-datos">
