--- a/html/nuestraTienda.html
+++ b/html/nuestraTienda.html
@@ -22,7 +22,7 @@
 
     <nav class="menu">
       <a href="quienesSomos.html">Quiénes somos</a>
-      <a href="tienda.html" class="activo">Tienda</a>
+      <a href="nuestraTienda.html" class="activo">Tienda</a>
       <a href="nuestrasSedes.html">Nuestras Sedes</a>
       <a href="registro.html">Regístrate</a>
       <a href="sesion.html">Iniciar sesión</a>
@@ -277,7 +277,7 @@
 
     <div class="cart-actions">
       <button class="btn-secundario" id="cartClear" type="button">Vaciar</button>
-      <a class="btn-principal" href="registro.html" style="text-align:center;">Pagar / Confirmar</a>
+      <a class="btn-principal" href="registro.html" style="text-align:center;">Solicitar</a>
     </div>
   </div>
 </aside>
@@ -351,7 +351,7 @@
       <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="quienesSomos.html">Quiénes somos</a></li>
-        <li><a href="tienda.html">Tienda</a></li>
+        <li><a href="nuestraTienda.html">Tienda</a></li>
         <li><a href="nuestrasSedes.html">Nuestras sedes</a></li>
         <li><a href="registro.html">Regístrate</a></li>
       </ul>
