Decimotercer Commit: Agregando página confirmar pedido, solución de errores

--- a/html/nuestraTienda.html
+++ b/html/nuestraTienda.html
@@ -24,8 +24,7 @@
       <a href="quienesSomos.html">Quiénes somos</a>
       <a href="nuestraTienda.html" class="activo">Tienda</a>
       <a href="nuestrasSedes.html">Nuestras Sedes</a>
-      <a href="registro.html">Regístrate</a>
-      <a href="sesion.html">Iniciar sesión</a>
+      <a href="inscripciones.html">Inscríbete</a>
     </nav>
   </div>
 </header>
@@ -60,7 +59,7 @@
           <p>De 4:30 pm a 6:00 pm</p>
           <div class="meta">
             <span class="precio">S/ 90 / mes</span>
-            <a class="btn-secundario" href="registro.html">Inscribirme</a>
+            <a class="btn-secundario" href="inscripciones.html">Inscribirme</a>
           </div>
         </div>
       </article>
@@ -75,7 +74,7 @@
           <p>Sábado de 9 am a 10:30 am</p>
           <div class="meta">
             <span class="precio">S/ 90 / mes</span>
-            <a class="btn-secundario" href="registro.html">Inscribirme</a>
+            <a class="btn-secundario" href="inscripciones.html">Inscribirme</a>
           </div>
         </div>
       </article>
@@ -89,7 +88,7 @@
           <p>¡Te regalamos un full kit!</p>
           <div class="meta">
             <span class="precio">S/ 150 / mes</span>
-            <a class="btn-secundario" href="registro.html">Inscribirme</a>
+            <a class="btn-secundario" href="inscripciones.html">Inscribirme</a>
           </div>
         </div>
       </article>
@@ -247,7 +246,7 @@
       <li>Actividades adaptadas por edad y nivel.</li>
       <li>Enfoque pre-operacional: juego, coordinación y hábitos saludables.</li>
       <li>Ambiente controlado y motivador.</li>
-      <li>Si necesitas horarios o sede, regístrate y te contactamos.</li>
+      <li>Si necesitas horarios o sede, Inscríbete y te contactamos.</li>
     </ul>
   </div>
 </section>
@@ -277,7 +276,7 @@
 
     <div class="cart-actions">
       <button class="btn-secundario" id="cartClear" type="button">Vaciar</button>
-      <a class="btn-principal" href="registro.html" style="text-align:center;">Solicitar</a>
+      <a href="confirmarPedido.html" class="btn-principal">Confirmar pedido</a>
     </div>
   </div>
 </aside>
@@ -353,7 +352,7 @@
         <li><a href="quienesSomos.html">Quiénes somos</a></li>
         <li><a href="nuestraTienda.html">Tienda</a></li>
         <li><a href="nuestrasSedes.html">Nuestras sedes</a></li>
-        <li><a href="registro.html">Regístrate</a></li>
+        <li><a href="inscripciones.html">Inscríbete</a></li>
       </ul>
     </div>
 
