--- a/html/index.html
+++ b/html/index.html
@@ -23,8 +23,7 @@
       <a href="quienesSomos.html">Quiénes somos</a>
       <a href="nuestraTienda.html">Tienda</a>
       <a href="nuestrasSedes.html">Nuestras Sedes</a>
-      <a href="registro.html">Regístrate</a>
-      <a href="sesion.html">Iniciar sesión</a>
+      <a href="inscripciones.html">Inscríbete</a>
     </nav>
   </div>
 </header>
@@ -36,7 +35,7 @@
       Entrenamiento pre operacional que desarrolla coordinación,
       fuerza y confianza a través del juego.
     </p>
-    <a href="registro.html" class="btn-principal">Inscríbete ahora</a>
+    <a href="inscripciones.html" class="btn-principal">Inscríbete ahora</a>
   </div>
 </section>
 
@@ -135,7 +134,7 @@
         <li><a href="quienesSomos.html">Quiénes somos</a></li>
         <li><a href="nuestraTienda.html">Tienda</a></li>
         <li><a href="nuestrasSedes.html">Nuestras sedes</a></li>
-        <li><a href="registro.html">Regístrate</a></li>
+        <li><a href="inscripciones.html">Inscríbete</a></li>
       </ul>
     </div>
 
