--- a/html/inscripciones.html
+++ b/html/inscripciones.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Iniciar sesión | FitKids</title>
+  <title>Inscripción | FitKids</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="../img/logo_fit_kids.png">
   <link rel="stylesheet" href="../css/styles.css">
-  <link rel="stylesheet" href="../css/sesion.css">
+  <link rel="stylesheet" href="../css/registro.css">
 </head>
 
 <body>
@@ -24,48 +24,41 @@
       <a href="quienesSomos.html">Quiénes somos</a>
       <a href="nuestraTienda.html">Tienda</a>
       <a href="nuestrasSedes.html">Nuestras Sedes</a>
-      <a href="registro.html">Regístrate</a>
-      <a href="sesion.html" class="activo">Iniciar sesión</a>
+      <a href="inscripciones.html" class="activo">Inscríbete</a>
     </nav>
   </div>
 </header>
 
-<section class="auth">
-  <div class="contenedor auth-layout">
+<section class="seccion">
+  <div class="contenedor" style="display:flex; justify-content:center;">
+    <div class="form-card">
+      <h2>Inscripción</h2>
+      <p>Completa el formulario para inscribir a tu hijo(a).</p>
 
-    <aside class="auth-banner">
-      <div>
-        <h3>Bienvenido(a) a FitKids</h3>
-        <p>Accede para revisar tus registros, consultas o información del servicio.</p>
-      </div>
-    </aside>
+      <form>
+        <label>Nombre del padre/madre</label>
+        <input type="text" required>
 
-    <main class="auth-panel">
-      <div class="cabecera">
-        <h2>Iniciar sesión</h2>
-        <p>Ingresa tu correo y contraseña para continuar.</p>
-      </div>
+        <label>Nombre del niño(a)</label>
+        <input type="text" required>
 
-      <div class="cuerpo">
-        <form>
-          <label for="correo">Correo electrónico</label>
-          <input id="correo" type="email" placeholder="tucorreo@ejemplo.com" required>
+        <label>Edad</label>
+        <input type="number" min="4" max="12" required>
 
-          <label for="pass">Contraseña</label>
-          <input id="pass" type="password" placeholder="••••••••" required>
+        <label>Sede</label>
+        <select name="sede">
+          <option value="paucarpata">Paucarpata</option>
+          <option value="recoleta">Recoleta</option>
+        </select>
 
-          <div class="acciones">
-            <button type="submit" class="btn-principal">Ingresar</button>
-            <a class="btn-secundario" href="registro.html" style="text-align:center;">Crear cuenta</a>
-          </div>
+        <label>Correo electrónico</label>
+        <input type="email" required>
 
-          <div class="auth-links">
-            ¿Olvidaste tu contraseña? <a href="#">Recuperar</a>
-          </div>
-        </form>
-      </div>
-    </main>
-
+        <button class="btn-principal" type="submit" style="width:100%; margin-top:15px;">
+          Enviar inscripción
+        </button>
+      </form>
+    </div>
   </div>
 </section>
 
@@ -141,7 +134,7 @@
         <li><a href="quienesSomos.html">Quiénes somos</a></li>
         <li><a href="nuestraTienda.html">Tienda</a></li>
         <li><a href="nuestrasSedes.html">Nuestras sedes</a></li>
-        <li><a href="registro.html">Regístrate</a></li>
+        <li><a href="inscripciones.html">Inscríbete</a></li>
       </ul>
     </div>
 
@@ -153,6 +146,7 @@
         <li>✉️ contacto@fitkids.pe</li>
       </ul>
     </div>
+
   </div>
 
   <div class="footer-bottom">
