--- a/html/nuestrasSedes.html
+++ b/html/nuestrasSedes.html
@@ -23,8 +23,7 @@
       <a href="quienesSomos.html">Quiénes somos</a>
       <a href="nuestraTienda.html">Tienda</a>
       <a href="nuestrasSedes.html" class="activo">Nuestras Sedes</a>
-      <a href="registro.html">Regístrate</a>
-      <a href="sesion.html">Iniciar sesión</a>
+      <a href="inscripciones.html">Inscríbete</a>
     </nav>
   </div>
 </header>
@@ -58,7 +57,7 @@
           </div>
 
           <div class="sede-acciones">
-            <a class="btn-link" href="registro.html">Inscribirme</a>
+            <a class="btn-link" href="inscripciones.html">Inscribirme</a>
             <a class="btn-link" href="https://maps.app.goo.gl/QrscmJsHSzGTVLa5A" target="_blank" rel="noopener">Ver mapa</a>
           </div>
         </div>
@@ -78,7 +77,7 @@
           </div>
 
           <div class="sede-acciones">
-            <a class="btn-link" href="registro.html">Inscribirme</a>
+            <a class="btn-link" href="inscripciones.html">Inscribirme</a>
             <a class="btn-link" href="https://maps.app.goo.gl/nN5Dh5BohdzgYoE59" target="_blank" rel="noopener">Ver mapa</a>
           </div>
         </div>
@@ -93,7 +92,7 @@
     <ul>
       <li>Las sesiones se asignan por grupos de edad y nivel.</li>
       <li>Recomendamos ropa cómoda y una botella de agua.</li>
-      <li>Si es tu primera vez, regístrate para confirmar cupos y horarios.</li>
+      <li>Si es tu primera vez, Inscríbete para confirmar cupos y horarios.</li>
     </ul>
   </div>
 </section>
@@ -170,7 +169,7 @@
         <li><a href="quienesSomos.html">Quiénes somos</a></li>
         <li><a href="nuestraTienda.html">Tienda</a></li>
         <li><a href="nuestrasSedes.html">Nuestras sedes</a></li>
-        <li><a href="registro.html">Regístrate</a></li>
+        <li><a href="inscripciones.html">Inscríbete</a></li>
       </ul>
     </div>
 
