--- a/html/quienesSomos.html
+++ b/html/quienesSomos.html
@@ -24,8 +24,7 @@
       <a href="quienesSomos.html" class="activo">Quiénes somos</a>
       <a href="nuestraTienda.html">Tienda</a>
       <a href="nuestrasSedes.html">Nuestras Sedes</a>
-      <a href="registro.html">Regístrate</a>
-      <a href="sesion.html">Iniciar sesión</a>
+      <a href="inscripciones.html">Inscríbete</a>
     </nav>
   </div>
 </header>
@@ -166,7 +165,7 @@
         <li><a href="quienesSomos.html">Quiénes somos</a></li>
         <li><a href="nuestraTienda.html">Tienda</a></li>
         <li><a href="nuestrasSedes.html">Nuestras sedes</a></li>
-        <li><a href="registro.html">Regístrate</a></li>
+        <li><a href="inscripciones.html">Inscríbete</a></li>
       </ul>
     </div>
 
