--- a/html/inscripciones.html
+++ b/html/inscripciones.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="../img/logo_fit_kids.png">
   <link rel="stylesheet" href="../css/styles.css">
-  <link rel="stylesheet" href="../css/registro.css">
+  <link rel="stylesheet" href="../css/inscripciones.css">
 </head>
 
 <body>
@@ -154,5 +154,6 @@
   </div>
 </footer>
 <script src="../js/chatbot.js"></script>
+<script src="../js/inscripciones.js"></script>
 </body>
 </html>
